# cxas-scrapi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.agents/skills/cxas-cuj-report-generator/: README.md  SKILL.md  append_turn.py  compile_deliverables.py  construct_report.py
.agents/skills/cxas-dfcx-migration/: SKILL.md
.agents/skills/cxas-loss-analysis/: SKILL.md
.agents/workflows/: generate_tool_schema.md
.github/workflows/: ci.yml  commitlint.yml  docs.yml  release-please.yml
diagrams/: agent-architecture.excalidraw  callback-lifecycle.excalidraw  eval-workflow.excalidraw  promotion-flow.excalidraw  slot-machine-flow.excalidraw
docs/: index.md
docs/api/core/: sessions.md
docs/api/evals/: simulation-evals.md
docs/cli/: migrate.md
docs/contributing/: development-setup.md
docs/design-guide/: agent-architecture.md  callbacks.md  error-handling.md  index.md  instruction-design.md  tool-design.md  variables.md
docs/getting-started/: authentication.md  concepts.md
docs/guides/: index.md
docs/guides/agent-development/: index.md  team-collaboration.md
docs/guides/evaluation/: local-simulations.md  running-evals-cli.md
docs/guides/linting/: index.md
docs/guides/migration/: dfcx-migration.md  index.md
docs/guides/skills/: index.md  installation.md
docs/guides/slot-filling/: advanced.md  reference.md  tutorial.md
docs/patterns/: dynamic-prompting.md  index.md  self-healing.md  slot-filling.md
docs/tutorials/: index.md  restaurant-reservation.md
docs/vscode/: authoring.md  evaluations.md  importing.md  index.md  installation.md  quickstart.md  settings.md
examples/: cxas_scrapi_getting_started.ipynb
examples/bella_notte/: PATTERN.md  agent_instruction.md  app.json  callback.py  cxaslint.yaml  gecx-config.json  slot_filling_dag_framework.md
examples/bella_notte/tools/: confirm_pending.py  reject_pending.py  set_guest_name.py  set_large_party_phone.py  set_party_size.py  set_preferred_date.py  set_selected_time.py  set_special_requests.py
scripts/: check_brands.py
src/cxas_scrapi/: __init__.py
src/cxas_scrapi/cli/: app.py  llm_lint.py  main.py  migration_cli.py  resources_cli.py  trace_cli.py  versions_cli.py
src/cxas_scrapi/core/: agents.py  apps.py  audio_transformer.py  callbacks.py  changelogs.py  common.py  conversation_history.py  deployments.py  evaluations.py  github.py  guardrails.py  insights.py  response_parser.py  scorecards.py  sessions.py  tools.py  traces.py  variables.py  versions.py
src/cxas_scrapi/evals/: __init__.py  callback_evals.py  guardrail_evals.py  runner.py  simulation_evals.py  tool_evals.py  turn_evals.py
src/cxas_scrapi/migration/: __init__.py  ai_augment.py  analysis_report_template.html  analysis_reporter.py  artifacts_builder.py  cli_dashboard.py  code_block_migrator.py  colab_dashboard.py  cxas_topology_linker.py  data_models.py  designer.py  dfcx_conversation_runner.py  dfcx_dep_analyzer.py  dfcx_example_converter.py  dfcx_exporter.py  dfcx_migration_reporter.py  dfcx_parameter_extractor.py  dfcx_playbook_converter.py  dfcx_tool_converter.py  eval_generator.py  flow_visualizer.py  graph_visualizer.py  grouping_review.py  html_preview.py  integrity_checks.py  ir_bundle.py  main_visualizer.py  optimization_reporter.py  optimizer.py  phase_tracker.py  playbook_visualizer.py  post_deploy_lint.py  prompts.py  service.py  stage_runner.py  structural_consolidator.py  topology_wirer.py
src/cxas_scrapi/prompts/: __init__.py  llm_lint_prompts.py
src/cxas_scrapi/utils/: __init__.py  base_components.py  callback_libs.py  changelog_utils.py  combined_report_template.html  dependency_manager.py  eval_utils.py  gcs_utils.py  gemini.py  google_sheets_utils.py  insights_utils.py  latency_parser.py  linter.py  report_components.py  reporting.py  scorecard_template_manager.py  secret_manager_utils.py  ui_styles.py  versions_compare_report_template.html  versions_diff_block_template.html
tests/: conftest.py
tests/cxas_scrapi/: test_readme.py
tests/cxas_scrapi/cli/: test_app.py  test_cli_reporting.py  test_llm_lint.py  test_main.py  test_migration_cli.py  test_resources_cli.py  test_sync_callbacks.py  test_trace_cli.py
tests/cxas_scrapi/core/: test_audio_transformer.py  test_callbacks.py  test_common.py  test_conversation_history.py  test_deployments.py  test_insights.py  test_response_parser.py  test_sessions.py  test_tools.py  test_traces.py  test_variables.py
(+245 files in other folders)
